--- a/.gitignore
+++ b/.gitignore
@@ -33,6 +33,7 @@ pubspec.lock
 
 # Web related
 lib/generated_plugin_registrant.dart
+example/macos/Flutter/GeneratedPluginRegistrant.swift
 
 # Symbolication related
 app.*.symbols
