--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,6 +12,7 @@ dependencies:
     sdk: flutter
   automated_testing_framework: ^1.2.6
   convert: ^2.1.1
+  flutter_typeahead: ^1.8.8
   form_validation: ^1.0.1
   json_class: ^1.0.6+1
   logging: ^0.11.4
