--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -19,6 +19,8 @@ dependency_overrides:
   #   path: ../../automated_testing_framework
   # automated_testing_framework_example:
   #   path: ../../automated_testing_framework_example
+  # automated_testing_framework_models:
+  #   path: ../../automated_testing_framework_models
   automated_testing_framework_plugin_flow_control:
     path: ../
 
