--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -2,26 +2,28 @@ name: automated_testing_framework_plugin_flow_control
 description: Library to use provide flow control test steps to the Automated Testing Framework.
 homepage: https://github.com/peiffer-innovations/automated_testing_framework_plugin_flow_control
 
-version: 1.0.10+2
+version: 2.0.0
 
 environment:
   sdk: ">=2.7.0 <3.0.0"
 
 dependencies:
-  automated_testing_framework: ^1.3.3+2
+  automated_testing_framework: ^2.0.0
   convert: ^2.1.1
   flutter:
     sdk: flutter
   flutter_typeahead: ^2.0.0
   form_validation: ^1.0.2+1
   json_class: ^1.0.7+2
-  logging: ^0.11.4
+  logging: ">=0.11.4 <2.0.0"
   meta: ^1.2.4
   static_translations: ^1.0.3+1
 
 # dependency_overrides:
 #   automated_testing_framework:
 #     path: ../automated_testing_framework
+#   automated_testing_framework_models:
+#     path: ../automated_testing_framework_models
 
 dev_dependencies:
   flutter_test:
