--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -6,27 +6,26 @@ publish_to: "none"
 version: 1.0.0+1
 
 environment:
-  sdk: ">=2.7.0 <3.0.0"
+  sdk: ">=2.12.0 <3.0.0"
 
 dependencies:
-  automated_testing_framework_example: ^1.0.12+1
-  flutter:
-    sdk: flutter
-  websafe_platform: ^1.1.0
-
-dependency_overrides:
-  # automated_testing_framework:
-  #   path: ../../automated_testing_framework
-  # automated_testing_framework_example:
-  #   path: ../../automated_testing_framework_example
-  # automated_testing_framework_models:
-  #   path: ../../automated_testing_framework_models
+  automated_testing_framework_example: ^2.0.0
   automated_testing_framework_plugin_flow_control:
     path: ../
+  flutter:
+    sdk: flutter
+
+# dependency_overrides:
+#   automated_testing_framework:
+#     path: ../../automated_testing_framework
+#   automated_testing_framework_example:
+#     path: ../../automated_testing_framework_example
+#   automated_testing_framework_models:
+#     path: ../../automated_testing_framework_models
+#   automated_testing_framework_plugin_flow_control:
+#     path: ../
 
 dev_dependencies:
-  flutter_launcher_icons: ^0.8.1
-  flutter_native_splash: ^0.1.9
   flutter_test:
     sdk: flutter
 
