--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,7 +13,7 @@ dependencies:
   convert: ^3.0.0
   flutter:
     sdk: flutter
-  flutter_typeahead: ^3.0.0-nullsafety.0
+  flutter_typeahead: ^3.1.1
   form_validation: ^2.0.0
   json_class: ^2.0.0
   logging: ^1.0.0
