--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,6 +15,7 @@ dependencies:
     sdk: flutter
   flutter_typeahead: ^3.1.3
   form_validation: ^2.0.0
+  json_class: ^2.0.0
   json_theme: ^2.1.0+1
   logging: ^1.0.1
   static_translations: ^2.0.1
