--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -2,23 +2,23 @@ name: automated_testing_framework_plugin_flow_control
 description: Library to use provide flow control test steps to the Automated Testing Framework.
 homepage: https://github.com/peiffer-innovations/automated_testing_framework_plugin_flow_control
 
-version: 3.1.0+2
+version: 3.1.1
 
 environment:
-  sdk: ">=2.12.0 <3.0.0"
+  sdk: ">=2.15.0 <3.0.0"
 
 dependencies:
-  automated_testing_framework: ^3.1.0+3
+  automated_testing_framework: ^3.2.0
   collection: ^1.15.0
   convert: ^3.0.1
   flutter:
     sdk: flutter
-  flutter_typeahead: ^3.2.1
-  form_validation: ^2.1.0
-  json_class: ^2.1.2+1
-  json_theme: ^3.2.1
+  flutter_typeahead: ^3.2.4
+  form_validation: ^2.1.0+1
+  json_class: ^2.1.2+3
+  json_theme: ^3.2.3+1
   logging: ^1.0.2
-  static_translations: ^2.1.0
+  static_translations: ^2.1.0+1
 
 # dependency_overrides:
 #   automated_testing_framework:
