--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -2,13 +2,13 @@ name: automated_testing_framework_plugin_flow_control
 description: Library to use provide flow control test steps to the Automated Testing Framework.
 homepage: https://github.com/peiffer-innovations/automated_testing_framework_plugin_flow_control
 
-version: 3.1.1+2
+version: 3.1.1+3
 
 environment:
   sdk: ">=2.16.0 <3.0.0"
 
 dependencies:
-  automated_testing_framework: ^3.3.0
+  automated_testing_framework: ^3.3.1+1
   collection: ^1.15.0
   convert: ^3.0.1
   flutter:
@@ -18,7 +18,7 @@ dependencies:
   json_class: ^2.1.2+4
   json_theme: ^3.3.1
   logging: ^1.0.2
-  static_translations: ^2.1.0+2
+  static_translations: ^2.1.1
 
 # dependency_overrides:
 #   automated_testing_framework:
