--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -5,7 +5,7 @@ homepage: https://github.com/peiffer-innovations/automated_testing_framework_plu
 version: 4.0.1
 
 environment:
-  sdk: ">=2.16.0 <3.0.0"
+  sdk: '>=2.17.0 <3.0.0'
 
 dependencies:
   automated_testing_framework: ^4.0.0
@@ -17,7 +17,7 @@ dependencies:
   form_validation: ^2.1.0+2
   json_class: ^2.1.2+4
   json_theme: ^4.0.0
-  logging: ^1.0.2
+  logging: ^1.0.1
   static_translations: ^2.1.1
 
 # dependency_overrides:
