--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,33 +1,32 @@
 name: 'automated_testing_framework_plugin_flow_control'
 description: 'Library to use provide flow control test steps to the Automated Testing Framework.'
 homepage: 'https://github.com/peiffer-innovations/automated_testing_framework_plugin_flow_control'
-version: '4.0.1+27'
+version: '4.0.2'
 
-environment: 
-  sdk: '>=2.18.0 <3.0.0'
+environment:
+  sdk: '>=2.19.0 <3.0.0'
 
-dependencies: 
-  automated_testing_framework: '^4.0.7+15'
+dependencies:
+  automated_testing_framework: '^5.0.0'
   collection: '^1.16.0'
   convert: '^3.1.1'
-  flutter: 
+  flutter:
     sdk: 'flutter'
   flutter_typeahead: '^4.1.1'
   form_validation: '^2.2.0+6'
   json_class: '^2.1.4+1'
-  json_theme: '^4.0.3+5'
+  json_theme: '^5.0.0'
   logging: '^1.1.0'
   static_translations: '^2.1.1+22'
 
-dev_dependencies: 
-  flutter_test: 
+dev_dependencies:
+  flutter_test:
     sdk: 'flutter'
 
-
-flutter: 
+flutter:
   uses-material-design: true
 
-ignore_updates: 
+ignore_updates:
   - 'archive'
   - 'async'
   - 'boolean_selector'
